<resources>
  <string name="app_name">MyApp</string>
  <string name="send_label">Start interview</string>
  <string name="request_label">View previous interviews</string>
  <string name="section_title">Monthly Progress</string>
  <string name="chart_value">89%</string>
  <string name="chart_label">weekly target</string>
  <string name="quick_actions_title">Quick actions</string>
  <string name="promotion_title">Improve your skills Today!!</string>
  <string name="promotion_subtitle">Build interview confidence</string>
  <string name="text">Start Mock Interview</string>
  <string name="view_profile">View Profile</string>
  <string name="_67">67%</string>
  <string name="interviews">Interviews</string>
  <string name="improve_your_skills_ntoday">Improve your skills\nToday!!</string>
  <string name="start_mock_interview">Start Mock Interview</string>
    <string name="tips_nlibrary"><![CDATA[Tips &\nLibrary]]></string>
    <string name="next">\@string/next\n</string>
  <string name="previous">previous\n</string>
  <string name="action_settings">action_settings\n</string>
    <string name="by_continuing_you_agree_to_our_terms_and_privacy_policy">By continuing, you agree to our Terms and Privacy Policy.</string>
  <string name="welcome">Welcome</string>
  <string name="login_to_contine">Login to contine</string>
  <string name="login_to_continue" />
  <string name="email_address">Email address</string>
  <string name="simthembilemabanga_gmail_com">SimthembileMabanga@gmail.com</string>
  <string name="password">password</string>
  <string name="hashing">******</string>
  <string name="sign_in">Sign in</string>
  <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
  <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
  <string name="todo">TODO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_to_receive_a_reset_link">Enter your email to receive a reset link</string>
  <string name="reset_password">Reset password</string>
  <string name="send_reset_link">Send reset link</string>
  <string name="if_there_s_an_account_associated_with_this_email_we_ve_sent_a_reset_link">If there’s an account associated with this email, we’ve sent a reset link.</string>
  <string name="reset_password_subtitle">reset_password_subtitle\n</string>
  <string name="create_profile">create_profile</string>
  <string name="email">email\n</string>
  <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
  <string name="password_must_contain_at_least_one_number">Password must contain at least one number</string>
  <string name="confirm_password">Confirm password</string>
  <string name="create_account">Create Account</string>
  <string name="name">name</string>
  <string name="surname">Surname</string>
  <string name="Surname">Surname</string>
  <string name="Email">email</string>
  <string name="Name">Name</string>
  <string name="Create_Profile">Create Profile</string>
    <string name="start_mock_interview2">Start Mock Interview</string>
    <string name="select_interview">Select Interview</string>
    <string name="Next">Next</string>
  <string name="Back">Back</string>
  <string name="search_icon">Search Icon</string>
  <string name="search">Search</string>
  <string name="select_interviews">Select Interview</string>
  <string name="please_select_topic">Please select a topic</string>
    <string name="action">Action</string>
  <string name="quick_actions">Quick actions</string>
  <string name="monthly_progress">Monthly Progress</string>
</resources>